# gtksourceviewmm

./: .gitignore  AUTHORS  COPYING  ChangeLog  ChangeLog.diff  ChangeLog.pre-git  MAINTAINERS  MIGRATION  Makefile.am  Makefile.in  NEWS  README  README.OLD  aclocal.m4  autogen.sh  configure  configure.ac  configure.in  gtksourceviewmm.doap
CVS/: Entries
MSVC_NMake/: Makefile.vc  README  build-rules-msvc.mak  config-msvc.mak  create-lists-msvc.mak  filelist.am  generate-msvc.mak  info-msvc.mak  install.mak
build_shared/: Makefile_gensrc.am_fragment
build_shared/CVS/: Entries  Repository
codegen/: Makefile.am  source_truncate.pl
codegen/extradefs/: .gitignore  generate_extra_defs_gtksourceview.cc
codegen/gen_scripts/: gtksourceview_generate_docs.sh  gtksourceview_generate_enums.sh  gtksourceview_generate_extra_defs.sh  gtksourceview_generate_methods.sh
codegen/m4/: convert.m4  convert_gtksourceview.m4  convert_gtksourceviewmm.m4  filelist.am
docs/: Makefile.am
docs/reference/: .gitignore  Doxyfile.in  Makefile.am  reference-index.txt
gtksourceview/: Makefile.am  Makefile.in  README  gtksourceviewmm-1.0.pc.in  gtksourceviewmm-2.0.pc.in  gtksourceviewmm-uninstalled.pc.in  gtksourceviewmm.h  gtksourceviewmm.pc.in  gtksourceviewmmconfig.h.in
gtksourceview/CVS/: Entries  Repository
gtksourceview/gtksourceviewmm/: .gitignore  Makefile.am  Makefile.in  filelist.am  filelist.gmake.am  init.cc  init.h  markup.cc  markup.h  searchcontext.cc  searchcontext.h  searchsettings.cc  searchsettings.h  sourcebuffer.cc  sourcebuffer.h  sourcelanguage.cc  sourcelanguage.h  sourcelanguagesmanager.cc  sourcelanguagesmanager.h  sourcemarker.cc  sourcemarker.h  sourcemarkup.cc  sourcemarkup.h  sourcestylescheme.cc  sourcestylescheme.h  sourcetag.cc  sourcetag.h  sourcetagstyle.cc  sourcetagstyle.h  sourcetagtable.cc  sourcetagtable.h  sourceview.cc  sourceview.h  wrap_init.cc  wrap_init.h
gtksourceview/gtksourceviewmm/CVS/: Entries  Repository
gtksourceview/gtksourceviewmm/private/: Makefile.am  Makefile.in  sourcebuffer_p.h  sourcelanguage_p.h  sourcelanguagesmanager_p.h  sourcemarker_p.h  sourcestylescheme_p.h  sourcetag_p.h  sourcetagstyle_p.h  sourcetagtable_p.h  sourceview_p.h
gtksourceview/gtksourceviewmm/private/CVS/: Entries  Repository  Root
gtksourceview/src/: Makefile.am  Makefile.in  Makefile_list_of_hg.am_fragment  buffer.ccg  buffer.hg  completion.ccg  completion.hg  completionactivation.ccg  completionactivation.hg  completioncontext.ccg  completioncontext.hg  completioninfo.ccg  completioninfo.hg  completionitem.ccg  completionitem.hg  completionproposal.ccg  completionproposal.hg  completionprovider.ccg  completionprovider.hg  completionwords.ccg  completionwords.hg  diff.txt  filelist.am  gtksourceview.defs  gtksourceview_docs.xml  gtksourceview_enums.defs  gtksourceview_methods.defs  gtksourceview_others.defs  gtksourceview_signals.defs  gtksourceview_vfuncs.defs  gutter.ccg  gutter.hg  gutterrenderer.ccg  gutterrenderer.hg  gutterrendererpixbuf.ccg  gutterrendererpixbuf.hg  gutterrenderertext.ccg  gutterrenderertext.hg  language.ccg  language.hg  (+89 more)
gtksourceview/src/CVS/: Entries  Repository
scripts/: Makefile.in
scripts/CVS/: Entries  Repository
tests/: Makefile.am  Makefile.in  test-basic.cpp  test-get-buffer.cpp  test-langs.cpp  test-mime-types.cpp  test-search.cpp
tests/basic/: main.cc
tests/completion/: main.cc
tests/get_buffer/: main.cc
tests/langs/: main.cc
tests/mime_types/: main.cc
tests/search/: main.cc
tools/: Makefile.in
tools/CVS/: Entries  Repository
tools/extra_defs_gen/: Makefile.am  Makefile.in  generate_defs_gtk.cc
tools/extra_defs_gen/CVS/: Entries  Repository
tools/m4/: Makefile.am  Makefile.in  Makefile_list_of_sources.am_fragment  convert_gtksourceview.m4  convert_gtksourceviewmm.m4
tools/m4/CVS/: Entries  Repository
