SUBDIRS = src gtksourceviewmm

EXTRA_DIST = README gtksourceviewmmconfig.h.in \
libgtksourceviewmm-1.0.pc.in gtksourceviewmm.h

gtkmm_includedir      = $(includedir)/gtksourceviewmm-1.0
gtkmm_include_HEADER  = gtksourceviewmm.h

gtkmm_configdir       = $(libdir)/gtksourceviewmm-1.0/include
gtkmm_config_DATA     = gtksourceviewmmconfig.h

pkgconfigdir          = $(libdir)/pkgconfig
pkgconfig_DATA        = libgtksourceviewmm-1.0.pc

