SUBDIRS = src gtksourceviewmm

EXTRA_DIST = README gtksourceviewmmconfig.h.in \
gtksourceviewmm-2.0.pc.in gtksourceviewmm.h

gtkmm_includedir      = $(includedir)/gtksourceviewmm-2.0
gtkmm_include_DATA  = gtksourceviewmm.h

gtkmm_configdir       = $(libdir)/gtksourceviewmm-2.0/include
gtkmm_config_DATA     = gtksourceviewmmconfig.h

pkgconfigdir          = $(libdir)/pkgconfig
pkgconfig_DATA        = gtksourceviewmm-2.0.pc

