## Copyright (c) 2001
## The gtkmm development team.

sublib_name = gtksourceviewmm
sublib_namespace = gtksourceview
sublib_parentdir = gtksourceviewmm
files_defs = \
gtksourceview.defs \
gtksourceview_signals.defs \
gtksourceview_methods.defs \
gtksourceview_docs.xml \
gtksourceview_docs_override.xml


include $(top_srcdir)/build_shared/Makefile_gensrc.am_fragment

